@@ -1,7 +1,6 @@
 package com.janeirodigital.sai.authentication;
 
 import com.janeirodigital.mockwebserver.RequestMatchingFixtureDispatcher;
-import com.janeirodigital.sai.httputils.SaiHttpException;
 import com.nimbusds.oauth2.sdk.ErrorObject;
 import com.nimbusds.oauth2.sdk.ParseException;
 import com.nimbusds.oauth2.sdk.TokenErrorResponse;
@@ -14,14 +13,13 @@ import org.junit.jupiter.api.Test;
 import org.mockito.MockedStatic;
 import org.mockito.Mockito;
 
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
 import java.util.Arrays;
 import java.util.List;
 
 import static com.janeirodigital.mockwebserver.DispatcherHelper.mockOnGet;
 import static com.janeirodigital.mockwebserver.DispatcherHelper.mockOnPost;
-import static com.janeirodigital.mockwebserver.MockWebServerHelper.toUrl;
+import static com.janeirodigital.mockwebserver.MockWebServerHelper.toMockUri;
 import static com.janeirodigital.sai.httputils.HttpHeader.AUTHORIZATION;
 import static com.janeirodigital.sai.httputils.HttpMethod.GET;
 import static org.junit.jupiter.api.Assertions.*;
@@ -33,15 +31,15 @@ class ClientCredentialsSessionTests {
 
     private static MockWebServer server;
     private static RequestMatchingFixtureDispatcher dispatcher;
-    private static URL oidcProviderId;
-    private static URL socialAgentId;
-    private static URL applicationId;
+    private static URI oidcProviderId;
+    private static URI socialAgentId;
+    private static URI applicationId;
     private static final String clientIdentifier = "sai-java-client";
     private static final String clientSecret = "AAaabbBB-client-java-sai-BBbbaaAA";
     private static final List<String> scopes = Arrays.asList("openid", "profile");
 
     @BeforeEach
-    void beforeEach() throws MalformedURLException {
+    void beforeEach() {
         dispatcher = new RequestMatchingFixtureDispatcher();
         server = new MockWebServer();
         server.setDispatcher(dispatcher);
@@ -49,10 +47,10 @@ class ClientCredentialsSessionTests {
         mockOnGet(dispatcher, "/cc/op/.well-known/openid-configuration", "op-configuration-cc-json");
         mockOnPost(dispatcher, "/cc/op/token", List.of("op-token-response-cc-json"));
 
-        oidcProviderId = toUrl(server, "/cc/op/");
+        oidcProviderId = toMockUri(server, "/cc/op/");
 
-        socialAgentId = new URL("https://acme.example/id#org");
-        applicationId = new URL("https://projectron.example/id#app");
+        socialAgentId = URI.create("https://acme.example/id#org");
+        applicationId = URI.create("https://projectron.example/id#app");
     }
 
     @Test
@@ -73,7 +71,7 @@ class ClientCredentialsSessionTests {
 
     @Test
     @DisplayName("Initialize client credentials builder - oidc provider")
-    void initBuilderOidcProvider() throws SaiAuthenticationException, SaiHttpException {
+    void initBuilderOidcProvider() throws SaiAuthenticationException {
         ClientCredentialsSession.Builder builder = new ClientCredentialsSession.Builder();
         builder.setOidcProvider(oidcProviderId);
         assertEquals(oidcProviderId, builder.getOidcProviderId());
@@ -82,7 +80,7 @@ class ClientCredentialsSessionTests {
 
     @Test
     @DisplayName("Initialize client credentials builder - client identifier")
-    void initBuilderClientIdentifier() throws SaiAuthenticationException, SaiHttpException {
+    void initBuilderClientIdentifier() throws SaiAuthenticationException {
         ClientCredentialsSession.Builder builder = new ClientCredentialsSession.Builder();
         builder.setOidcProvider(oidcProviderId).setClientIdentifier(clientIdentifier);
         assertEquals(clientIdentifier, builder.getClientIdentifier());
@@ -90,7 +88,7 @@ class ClientCredentialsSessionTests {
 
     @Test
     @DisplayName("Initialize client credentials builder - client secret")
-    void initBuilderClientSecret() throws SaiAuthenticationException, SaiHttpException {
+    void initBuilderClientSecret() throws SaiAuthenticationException {
         ClientCredentialsSession.Builder builder = new ClientCredentialsSession.Builder();
         builder.setOidcProvider(oidcProviderId).setClientIdentifier(clientIdentifier).setClientSecret(clientSecret);
         assertEquals(clientSecret, builder.getClientSecret());
@@ -98,7 +96,7 @@ class ClientCredentialsSessionTests {
 
     @Test
     @DisplayName("Initialize solid-oidc builder - scope")
-    void initBuilderScope() throws SaiAuthenticationException, SaiHttpException {
+    void initBuilderScope() throws SaiAuthenticationException {
         ClientCredentialsSession.Builder builder = new ClientCredentialsSession.Builder();
         builder.setOidcProvider(oidcProviderId).setClientIdentifier(clientIdentifier).setClientSecret(clientSecret).setScope(scopes);
         for (String scope : scopes) { assertTrue(builder.getScope().contains(scope)); }
@@ -106,7 +104,7 @@ class ClientCredentialsSessionTests {
 
     @Test
     @DisplayName("Initialize solid-oidc builder - request tokens")
-    void initBuilderRequestTokens() throws SaiAuthenticationException, SaiHttpException {
+    void initBuilderRequestTokens() throws SaiAuthenticationException {
         ClientCredentialsSession.Builder builder = new ClientCredentialsSession.Builder();
         builder.setOidcProvider(oidcProviderId).setClientIdentifier(clientIdentifier).setClientSecret(clientSecret)
                 .setScope(scopes).requestToken();
@@ -115,7 +113,7 @@ class ClientCredentialsSessionTests {
 
     @Test
     @DisplayName("Initialize solid-oidc builder - misc token response failure")
-    void initBuilderRequestTokensResponseFailure() throws SaiAuthenticationException, ParseException, SaiHttpException {
+    void initBuilderRequestTokensResponseFailure() throws SaiAuthenticationException, ParseException {
         ClientCredentialsSession.Builder builder = new ClientCredentialsSession.Builder();
         builder.setOidcProvider(oidcProviderId).setClientIdentifier(clientIdentifier).setClientSecret(clientSecret).setScope(scopes);
         try (MockedStatic<TokenResponse> mockStaticResponse = Mockito.mockStatic(TokenResponse.class)) {
@@ -131,7 +129,7 @@ class ClientCredentialsSessionTests {
 
     @Test
     @DisplayName("Initialize solid-oidc builder - build session")
-    void initBuilderBuildSession() throws SaiAuthenticationException, SaiHttpException {
+    void initBuilderBuildSession() throws SaiAuthenticationException {
         ClientCredentialsSession.Builder builder = new ClientCredentialsSession.Builder();
         ClientCredentialsSession session = builder.setSocialAgent(socialAgentId)
                                                   .setApplication(applicationId)
@@ -158,7 +156,7 @@ class ClientCredentialsSessionTests {
 
     @Test
     @DisplayName("Initialize solid-oidc builder - build session - no identifiers")
-    void initBuilderBuildSessionNoIds() throws SaiAuthenticationException, SaiHttpException {
+    void initBuilderBuildSessionNoIds() throws SaiAuthenticationException {
         ClientCredentialsSession.Builder builder = new ClientCredentialsSession.Builder();
         ClientCredentialsSession session = builder.setOidcProvider(oidcProviderId)
                                                   .setClientIdentifier(clientIdentifier)
@@ -174,7 +172,7 @@ class ClientCredentialsSessionTests {
 
     @Test
     @DisplayName("Refresh client credentials session")
-    void refreshSession() throws SaiAuthenticationException, SaiHttpException {
+    void refreshSession() throws SaiAuthenticationException {
         ClientCredentialsSession.Builder builder = new ClientCredentialsSession.Builder();
         ClientCredentialsSession session = builder.setOidcProvider(oidcProviderId)
                 .setClientIdentifier(clientIdentifier)
